erDiagram
    USUARIO ||--|{ EMPRESTIMO : realiza
    LIVRO ||--|{ EMPRESTIMO : pego
    LIVRO ||--|{ CATEGORIA : possui

    USUARIO {
        UUID uuid
        long id PK
        string nome
        string email
        string senha
        string matricula
        long qt_livros_emprestados "default 0"
        string identificador "USER/ADMIN"
    }
    LIVRO {        UUID uuid
        long isbn PK
        string titulo
        string autor
        long anopublicado
        string linguagem
        long n_exemplares
        long n_disponivel
        long categoria_id FK
    }
    EMPRESTIMO {
        UUID uuid
        long id PK
        long livro_id FK
        long usuario_id FK
        timestamp datapego "YYYY-MM-DD hh:mm:ss"
        timestamp dataprazo "YYYY-MM-DD hh:mm:ss"
        string status "ATIVO/INATIVO"
        long qt_renovacoes "default 0"
    }
    CATEGORIA{
        UUID uuid
        long id PK
        string nome
    }
